@@ -1,3 +1,7 @@
+108
+- Correct bug which prevented disabling the service from Kodi
+- Place named pipe in /var/run/librespot
+
 107
 - Update to ddfc28f
 
